--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <audio
+      controls
+      src="https://mp3uk.net/mp3/files/instasamka-hate-me-mp3.mp3"
+    ></audio>
   </body>
 </html>
